update login and register
